--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-is": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
